# miniSerial

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
cmake/: deps_cpm.cmake  setup_cpm.cmake
src/: CMakeLists.txt  main.cpp
